--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Palanquin|Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/Style.css">
+  <link rel="stylesheet" href="CSS/Fonts.css">
   <title>Arthur portfolio</title>
 </head>
 
 <body>
   <header class="l-header">
-    <h1><a href="#">Arthur Sorignet Gotrot Portfolio</a></h1>
-    <h2>Game designer</h2>
-      <ul>
-        <nav>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">A propos</a></li>
-        <li><a href="#">Me contacter</a></li>
-        <li><a href="#">CV</a></li>
-      </ul>
+    <div class="l-header-title">
+      <h1><a href="#">Arthur Sorignet--Gautrot</a></h1>
+      <h2>Portfolio Game designer</h2>
+    </div>
+    <nav>
+      <a href="#" class="visible">Accueil</a>
+      <a href="#" class="visible">A propos</a>
+      <a href="#" class="visible">Me contacter</a>
+      <a href="#" class="visible">CV</a>
     </nav>
   </header>
 
@@ -25,16 +25,12 @@
     <div class="Left-arrow"></div>
 
     <article>
+      <img src="test.png" alt="Bjr" width="500px" height="300px">
       <h2>Nom de jeu</h2>
-      <img src="test.png" alt"Bjr" width="500px" height="300px">
     </article>
 
     <div class="Right-arrow"></div>
   </content>
-
-  <footer class="l-footer">
-      <p>Asmos inc all right reserved.</p>
-  </footer>
 </body>
 
 </html>
