--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="CSS/Style.css">
-  <link rel="stylesheet" href="CSS/Fonts.css">
+  <link rel="stylesheet" href="CSS\Fonts.css">
+  <link rel="stylesheet" href="CSS\Style.css">
   <title>Arthur portfolio</title>
 </head>
 
@@ -11,25 +11,24 @@
   <header class="l-header">
     <div class="l-header-title">
       <h1><a href="#">Arthur Sorignet--Gautrot</a></h1>
-      <h2>Portfolio Game designer</h2>
+      <h2>Portfolio Game Designer</h2>
     </div>
     <nav>
-      <a href="#" class="visible">Accueil</a>
-      <a href="#" class="visible">A propos</a>
-      <a href="#" class="visible">Me contacter</a>
-      <a href="#" class="visible">CV</a>
+      <a href="#">Accueil</a>
+      <a href="#">A propos</a>
+      <a href="#">Me contacter</a>
+      <a href="#">CV</a>
     </nav>
   </header>
 
-  <content>
-    <div class="Left-arrow"></div>
-
+  <content class="l-body">
+    <div class="arrow Left"></div>
+    <div class="arrow Right"></div>
     <article>
-      <img src="test.png" alt="Bjr" width="500px" height="300px">
+      <img src="test.png" alt="Bjr">
       <h2>Nom de jeu</h2>
     </article>
 
-    <div class="Right-arrow"></div>
   </content>
 </body>
 
