--- a/Article.html
+++ b/Article.html
@@ -9,10 +9,10 @@
 
 <body>
   <header class="l-header">
-    <a href="#" class="l-header-title">
-      <h1>Arthur Sorignet--Gautrot</h1>
+    <div class="l-header-title">
+      <h1><a href="#">Arthur Sorignet--Gautrot</a></h1>
       <h2>Portfolio Game Designer</h2>
-    </a>
+    </div>
     <nav>
       <a href="#">Accueil</a>
       <a href="#">A propos</a>
@@ -21,15 +21,11 @@
     </nav>
   </header>
 
-  <content class="l-body-carousel">
-    <div class="pannel Left"><span class="arrow"></span></div>
-    <div class="pannel Right"><span class="arrow"></span></div>
-    <article>
-      <img src="test.png" alt="Bjr">
-      <h2>Nom de jeu</h2>
-    </article>
-
-  </content>
+  <article class="l-body-game">
+    <h2>Nom de jeu</h2>
+    <img src="test.png" alt="Bjr">
+    <p>Qu'est-ce que le Lorem Ipsum?</p>
+  </article>
 </body>
 
 </html>
