--- a/Jeu.html
+++ b/Jeu.html
@@ -23,7 +23,10 @@
 
   <article class="l-body-game">
     <h2>Nom de jeu</h2>
-    <img src="test.png" alt="Bjr">
+    <div class="image-link-container">
+      <a href="#" class="image-link"></a>
+      <img src="test.png" alt="Bjr">
+    </div>
     <pre>
           Qu'est-ce que le Lorem Ipsum?
     Je ne sais pas, mais ce qui est sûr, c'est que ce site tuera.
