shit done again

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
   <content class="l-body-carousel">
     <div class="pannel Left"><span class="arrow"></span></div>
     <div class="pannel Right"><span class="arrow"></span></div>
+    <a href="#">
     <article>
       <img src="test.png" alt="Bjr">
       <h2>Nom de jeu</h2>
     </article>
+  </a>
 
   </content>
 </body>
