--- a/Apropos.html
+++ b/Apropos.html
@@ -21,18 +21,11 @@
     </nav>
   </header>
 
-  <article class="l-body-game">
-    <h2>Nom de jeu</h2>
-    <div class="image-link-container">
-      <a href="#" class="image-link"></a>
-      <img src="test.png" alt="Bjr">
-    </div>
-    <p>
-          Qu'est-ce que le Lorem Ipsum?
-    Je ne sais pas, mais ce qui est sûr, c'est que ce site tuera.
+  <img src="Assets/logo.png" alt="logo" width="200px" height="200px">
+  <h1>Arthur Sorignet--Gautrot</h1>
+  <p>Hi</p>
+  <p>Voilà mon portfolio</p>
 
-       Oui.</p>
-  </article>
 </body>
 
 </html>
