--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="CSS\Fonts.css">
   <link rel="stylesheet" href="CSS\Style.css">
   <title>Arthur portfolio</title>
+  <script src="JavaScript/Jquery.js"></script>
 </head>
 
 <body>
@@ -32,6 +33,7 @@
   </a>
 
   </content>
+  <script src="JavaScript/index.js"></script>
 </body>
 
 </html>
