--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
     <div class="pannel Right"><span class="arrow"></span></div>
     <a href="#">
     <article>
-      <img src="test.png" alt="Bjr">
+      <img src="test1.png" alt="Bjr">
       <h2>Nom de jeu</h2>
     </article>
+    <!--<article>
+      <img src="test2.png" alt="Bjr">
+      <h2>Nom de jeu</h2>
+    </article>
+    <article>
+      <img src="test3.png" alt="Bjr">
+      <h2>Nom de jeu</h2>
+    </article>-->
   </a>
 
   </content>
