--- a/index.html
+++ b/index.html
@@ -26,19 +26,24 @@
     <div class="pannel Left"><span class="arrow"></span></div>
     <div class="pannel Right"><span class="arrow"></span></div>
     <a href="#">
-    <article>
-      <img src="test1.png" alt="Bjr">
-      <h2>Nom de jeu</h2>
-    </article>
-    <!--<article>
-      <img src="test2.png" alt="Bjr">
-      <h2>Nom de jeu</h2>
-    </article>
-    <article>
-      <img src="test3.png" alt="Bjr">
-      <h2>Nom de jeu</h2>
-    </article>-->
-  </a>
+      <article>
+        <img src="test1.png" alt="Bjr">
+        <h2>Nom de jeu</h2>
+      </article>
+    </a>
+    <a href="#">
+      <article>
+        <img src="test2.png" alt="Bjr">
+        <h2>Nom de jeu</h2>
+      </article>
+    </a>
+    <a href="#">
+      <article>
+        <img src="test3.png" alt="Bjr">
+        <h2>Nom de jeu</h2>
+      </article>
+    </a>
+
 
   </content>
   <script src="JavaScript/index.js"></script>
