--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <div class="pannel Left"><span class="arrow"></span></div>
     <div class="pannel Right"><span class="arrow"></span></div>
     <a href="#">
-      <article>
+      <article class="hidden">
         <img src="test1.png" alt="Bjr">
         <h2>Nom de jeu</h2>
       </article>
     </a>
     <a href="#">
-      <article>
+      <article class="show">
         <img src="test2.png" alt="Bjr">
         <h2>Nom de jeu</h2>
       </article>
     </a>
     <a href="#">
-      <article>
+      <article class="show">
         <img src="test3.png" alt="Bjr">
         <h2>Nom de jeu</h2>
       </article>
